# arbScanner

08_homework/: CMakeLists.txt  main.cpp
ArbitrageScanner/: .env.example  .gitignore  ArbitrageScanner.py  ArbitrageScanner.pyproj  Dockerfile  README.md  docker-compose.yml  requirements.txt  Техническое задание_ криптоарбитражный сканер.docx
ArbitrageScanner/arbscanner/: __init__.py  config.py  models.py  worker.py
ArbitrageScanner/arbscanner/api/: app.py
ArbitrageScanner/arbscanner/api/static/: index.html
ArbitrageScanner/arbscanner/connectors/: __init__.py  base.py  factory.py  mock_connector.py  real_connector.py
ArbitrageScanner/arbscanner/services/: broker.py  engine.py  scanner.py  store.py  telegram_notifier.py
ArbitrageScanner/db/: schema.sql
ArbitrageScanner/docs/: architecture.md  backlog.md
ArbitrageScanner/tests/: test_api_fallback.py  test_engine.py  test_scanner_pipeline.py
CEX-trade-alarm-bot/: bot.py
Notion-Bybit/: .env
